fix: 이미지 포함 목록 조회시 타임아웃 걸리는 에러 수정